erDiagram
    dw_materialien {
        SERIAL dw_id PK
        INTEGER material_id
        INTEGER lieferant_id
        VARCHAR materialname
        VARCHAR materialkategorie
        VARCHAR einheit
        NUMERIC einkaufspreis
        INTEGER mindestbestand
        INTEGER lagerbestand
        BOOLEAN nachhaltigkeit_zertifikat
        VARCHAR herkunftsland
        INTEGER lieferzeit_tage
        BOOLEAN aktiv
        TIMESTAMP gueltig_von
        TIMESTAMP gueltig_bis
    }

    dw_produkte {
        SERIAL dw_id PK
        INTEGER produkt_id
        VARCHAR produktname
        VARCHAR produktkategorie
        VARCHAR produktlinie
        NUMERIC verkaufspreis
        NUMERIC herstellkosten
        NUMERIC gewicht_kg
        VARCHAR masse_lxbxh
        VARCHAR farbe
        VARCHAR material_haupttyp
        INTEGER lagerbestand
        INTEGER mindestbestand
        BOOLEAN aktiv
        TIMESTAMP gueltig_von
        TIMESTAMP gueltig_bis
    }

    dw_stueckliste {
        SERIAL dw_id PK
        INTEGER stueckliste_id
        INTEGER produkt_id FK
        INTEGER material_id FK
        NUMERIC menge
        VARCHAR einheit
        TEXT bemerkung
        TIMESTAMP gueltig_von
        TIMESTAMP gueltig_bis
    }

    dw_bestellungen {
        SERIAL dw_id PK
        INTEGER bestell_id
        VARCHAR kundennummer
        VARCHAR kundenname
        VARCHAR kundenkategorie
        DATE bestelldatum
        DATE lieferdatum
        VARCHAR status
        NUMERIC gesamtwert
        VARCHAR zahlungsbedingung
        NUMERIC versandkosten
        NUMERIC rabatt_prozent
        VARCHAR land
        TIMESTAMP gueltig_von
        TIMESTAMP gueltig_bis
    }

    dw_bestellpositionen {
        SERIAL dw_id PK
        INTEGER position_id
        INTEGER bestell_id FK
        INTEGER produkt_id FK
        INTEGER menge
        NUMERIC einzelpreis
        NUMERIC positionswert
        NUMERIC rabatt_prozent
        VARCHAR lieferstatus
        TIMESTAMP gueltig_von
        TIMESTAMP gueltig_bis
    }

    dw_produkte ||--o{ dw_stueckliste : "enthält"
    dw_materialien ||--o{ dw_stueckliste : "verwendet in"
    dw_bestellungen ||--o{ dw_bestellpositionen : "enthält"
    dw_produkte ||--o{ dw_bestellpositionen : "bestellt"
